crates/biome_html_parser/tests/html_specs/ok/svelte/directives/animate_custom.svelte
{#each list as item (item)}
  <li animate:whizz={{ duration: 400 }}>{item}</li>
{/each}
