crates/biome_html_parser/tests/html_specs/error/svelte/directives/animate_invalid_params.svelte
{#each list as item (item)}
  <li animate:flip={{ delay: }>{item}</li>
{/each}
